--- a/deep-learning.html
+++ b/deep-learning.html
@@ -190,7 +190,7 @@ position is to create products or tools built on Artificial Intelligence...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
+<h5><a href='https://jobs.lever.co/paperspace/a3633631-f68f-487d-82cb-7376265696f2'>Paperspace - Deep Learning Technical Writer (project based)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-23</p>
 <hr/>
@@ -220,15 +220,15 @@ text?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avvir.workable.com/j/95479207A5'>Avvir - Jobs: Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
-<h5><a href='https://avvir.workable.com/j/E5D7D208CE'>Avvir - Jobs: Senior Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avvir.workable.com/j/E5D7D208CE'>Avvir - Jobs: Senior Computer Vision/Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689950075-thesis-deep-learning-for-autonomous-cars'>Bosch Group Thesis Deep Learning for Autonomous Cars | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999689950075-thesis-deep-learning-for-autonomous-cars'>Bosch Group Thesis Deep Learning for Autonomous Cars | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-17</p>
 <hr/>
@@ -247,7 +247,7 @@ Engineering ? AM - AV Engineering Software - Machine Learning. Intern?...</p>
 domain shift between simulated and real data, as well as different weather, 
 daytime?...</p>
 <hr/>
-<h5><a href='https://sivantos.recruitee.com/o/werkstudent-praktikant-mwd-im-bereich-deeplearning-signalverarbeitung'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sivantos.recruitee.com/o/werkstudent-praktikant-mwd-im-bereich-deeplearning-signalverarbeitung'>
       Werkstudent / Praktikant (m/w/d) im Bereich Deep-Learning Signalverarbeitung - Sivantos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -305,7 +305,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-05-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.surrey.ac.uk/vacancy.aspx?ref=098918-R'>
+<h5><a href='https://jobs.surrey.ac.uk/vacancy.aspx?ref=098918-R'>
 	098918-R Research Fellow in Computer Vision and Deep Learning - Jobs at the University of Surrey
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -331,7 +331,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4283353002'>Job Application for Computer Vision and Deep Learning Researchers &amp; Engineers  at Samsung Research America</a></h5> 
+<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4283353002'>Job Application for Computer Vision and Deep Learning Researchers &amp; Engineers  at Samsung Research America</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -345,7 +345,7 @@ source and research community is a fundamental part of your role. Competitive?..
 <p>4 days ago ... We're looking for firmware engineers to build the future of hearing instruments 
 and take on significant leadership and responsibility at a fast-growing startup.</p>
 <hr/>
-<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_university/job/San-Jose/Deep-Learning-Research-Intern_75223'>Deep Learning Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Job Description. Position summary: We are seeking computer vision and deep 
 learning students to conduct new research in one of several project areas. 
@@ -379,7 +379,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/o5YV7fwP'>Samsung Semiconductor, Inc. Careers - Advanced Systems Lab - Neural Processor (Deep Learning) Research Scientist</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -395,11 +395,11 @@ Project?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/okRT7fwV'>Samsung Semiconductor, Inc. Careers - Deep Learning Engineer (Speech and Language Processing)</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/olDU7fwJ'>Samsung Semiconductor, Inc. Careers - Software Developer ? Computer Vision/Deep Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/samsungssi/job/olDU7fwJ'>Samsung Semiconductor, Inc. Careers - Software Developer ? Computer Vision/Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Diego California</span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
@@ -459,7 +459,7 @@ Project?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://clinicomp.workable.com/j/052C359CF0'>CliniComp, Intl. - Jobs: Data Scientist - Deep Learning - Apply online</a></h5> 
+<h5><a href='https://clinicomp.workable.com/j/052C359CF0'>CliniComp, Intl. - Jobs: Data Scientist - Deep Learning - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
